# Maestro

./: .env-example  .importlinter  app.py  pyproject.toml
agents/: agent.py  planning_agent.py
agents/recommendation/: _recommendation_tool.py  music_links.json  recommendation_agent.py
llm/: client.py
logging/: logger.py
rag/: client.py  ingest.py  util_classes.py
rag/data/: composers.jsonl  experience.jsonl  genres.jsonl  instruments.jsonl  pieces.jsonl  playlists.jsonl  popsical.jsonl
rag/preprocessed_db/: chroma.sqlite3
tests/: test_interface.py  test_llm_client.py
ui/: interface.py
