[project]
name = "maestro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb<1.6",
    "dotenv>=0.9.9",
    "gradio>=6.14.0",
    "litellm>=1.83.0",
    "onnxruntime<1.24",
    "openai>=2.36.0",
    "plotly>=6.7.0",
    "pydantic>=2.13.3",
    "scikit-learn>=1.8.0",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "import-linter[ui]>=2.11",
]
